--- a/css/style.css
+++ b/css/style.css
@@ -198,7 +198,7 @@ h1, h2, h3, h4 {
 .experience-card h3 {
     font-size: 1.5rem;
     margin-bottom: 15px;
-    color: #d4af37;
+    color: #58802C;
 }
 
 .experience-card p {
@@ -238,12 +238,12 @@ h1, h2, h3, h4 {
 
 .experience-card:hover {
     transform: translateY(-10px) rotateX(5deg);
-    box-shadow: 0 15px 40px rgba(212, 175, 55, 0.2);
+    box-shadow: 0 15px 40px #57802cb6;
 }
 
 .experience-card:hover .card-hover-content {
     bottom: 0;
-    opacity: 1;
+    opacity: 1; 
 }
 
 .experience-card:hover .card-image {
